Add directory stellmaking

--- a/steelmaking/steelmaking.ipynb
+++ b/steelmaking/steelmaking.ipynb
@@ -16,34 +16,14 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "UGDYLJNu6ipB"
-      },
-      "source": [
-        "- Решение задачи регрессии: предсказать температуру сплава в конце процесса обработки стали;\n",
-        "- Используемые библиотеки: numpy, pandas, matplotlib, seaborn, ploty, lightgbm, catboost, hyperopt, keras;\n",
-        "- Анализ и чистка данных (обработка пропусков и выбросов): describe, agg, groupby, apply, query, to_datetime, isnull, fillna, dropna, join, concat, ...;\n",
-        "- Проверка данных на мультиколлениарность: corr (heatmap), variance_inflation_factor (VIF анализ), SelectKBest (F-regression);\n",
-        "- Предобработка данных (разделение на выборки и масштабирование): train_test_split, StandardScaler;\n",
-        "- Используемые модели:\n",
-        "1. Линейная регрессии (LinearRegression);\n",
-        "2. K-ближайших соседей (KNeighborsRegressor);\n",
-        "3. Случайный лес (RandomForestRegressor);\n",
-        "4. Градиентный бустинг (LightGBM, CatBoost);\n",
-        "5. Нейросети (полносвязная сеть (maltylayer perceptron), сверточная сеть (convolution multylayer network), сеть с архитектурой LeNet);\n",
-        "- Кросс-валидация и настройка гиперпараметров (cross_val_score, GridSearchCV, RandomizedSearchCV, hyperopt);\n",
-        "- Анализ значимых признаков (RidgeCV, feature_importances, permutation_importance);\n",
-        "- Упаковка в пайплайн (Pipeline) нескольких шагов, упаковка в пайплайн несколько моделей, использование пайплайн совместно с кросс-валидацией и оптимизацией гиперпараметров."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "PnOxa-RFeu3U"
       },
       "source": [
         "# Описание проекта\n",
         "\n",
-        "Чтобы оптимизировать производственные расходы, металлургический комбинат ООО «Так закаляем сталь» решил уменьшить потребление электроэнергии на этапе обработки стали. Вам предстоит построить модель, которая предскажет температуру стали.\n",
+        "Оптимизация производственных расходов металлургического комбината. Необходимо построить модель машинного обучения, которая предсказывает температуру сплава стали на этапе обработки (внесения лигирующих добавок). Это позволит оптимизировать процесс подогрева сплава стали и уменьшить потребление электроэнергии.\n",
+        "\n",
+        "*Задача:* Предсказать температуру сплава стали в конце этапа обработки после внесения лигирующих добавок.\n",
         "\n",
         "### Описание этапа обработки\n",
         "\n",
@@ -68,6 +48,34 @@
         "- `data_wire_time.csv` — данные о проволочных материалах (время).\n",
         "\n",
         "Во всех файлах столбец `key` содержит номер партии. В файлах может быть несколько строк с одинаковым значением `key`: они соответствуют разным итерациям обработки."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UGDYLJNu6ipB"
+      },
+      "source": [
+        "# Используемые инструменты и навыки\n",
+        "\n",
+        "***Решается задача регрессии:***\n",
+        "Предсказать температуру сплава в конце процесса обработки стали.\n",
+        "\n",
+        "***Используемые библиотеки:*** numpy, pandas, matplotlib, seaborn, ploty, sklearn, lightgbm, catboost, hyperopt, keras.\n",
+        "\n",
+        "***Используемые инструменты:***\n",
+        "- Анализ и чистка данных (обработка пропусков и выбросов): describe, agg, groupby, apply, query, to_datetime, isnull, fillna, dropna, join, concat, ...;\n",
+        "- Проверка данных на мультиколлениарность: corr (heatmap), variance_inflation_factor (VIF анализ), SelectKBest (F-regression);\n",
+        "- Предобработка данных (разделение на выборки и масштабирование): train_test_split, StandardScaler;\n",
+        "- Построение моделей:\n",
+        "1. Линейная регрессии (LinearRegression);\n",
+        "2. K-ближайших соседей (KNeighborsRegressor);\n",
+        "3. Случайный лес (RandomForestRegressor);\n",
+        "4. Градиентный бустинг (LightGBM, CatBoost);\n",
+        "5. Нейросети (полносвязная сеть (maltylayer perceptron), сверточная сеть (convolution multylayer network), сеть с архитектурой LeNet);\n",
+        "- Кросс-валидация и настройка гиперпараметров (cross_val_score, GridSearchCV, RandomizedSearchCV, hyperopt);\n",
+        "- Анализ значимых признаков (RidgeCV, feature_importances, permutation_importance);\n",
+        "- Упаковка в пайплайн (Pipeline) нескольких шагов, упаковка в пайплайн несколько моделей, использование пайплайн совместно с кросс-валидацией и оптимизацией гиперпараметров."
       ]
     },
     {
@@ -1858,16 +1866,6 @@
         "\n",
         "print('Колличество партий в общем датасете:', data.shape[0], '\\n')\n",
         "print(data.head(3))\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "T3jsgtxB0hLv"
-      },
-      "source": [
-        "<b> КОММЕНТАРИЙ ТИМЛИДА</b><br>\n",
-        "Тут такой момент: нам нужны только те ковши, которые есть во всех таблицах. А тогда соединение лефт (по всем таблицам) нам не очень подходит. Тут иннер будет правильнее. Таким образом мы отсечём не нужные ковши! Тут логика ещё такая, что все шаги должны быть. Если шага какого-то нет, то бракуем ковш."
       ]
     },
     {
@@ -13274,47 +13272,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3QVOHa7IyAZY"
-      },
-      "source": [
-        "<div class=\"alert alert-success\" style=\"border-color: green; border-radius: 5px\">\n",
-        "    <p><u><b>✅ КОММЕНТАРИЙ ТИМЛИДА 3</b></u></p>\n",
-        "ОК, Виталий, можно сказать, что пройден весь алгоритм моделирования от анализа исходной инфо до анализа важности факторов.<br> Увидел твои комментари/коорректировки. ОК.  Собственно всё тут0<br>\n",
-        "\n",
-        "\n",
-        "Всегда стараюсь на этом проекте сказать всем вот ещё что: цель заказчика - экономия энергоресурсов.<br>\n",
-        "И в этом проекте искали как раз способ точно предсказывать температуру. И круто использовали для этого весь арсенал<br>\n",
-        "А если рассудать с позиции такой: а что нужно сделать, чтобы снизить энергопотребление?<br>\n",
-        "Судя по модели, самым важным фактором является первая температура. Это значит, что управляя ею, мы сможем управлять энергозатратами. Вывод понятен. Теперь надо разработать мероприятия для этого решения. И тут вопрос возникает скм собой: а это так точно? мы можем управлять первой температурой? В общем, наша модель - только начало работы над энергоэффективностью.<br>\n",
-        "    \n",
-        "Так же есть ещё одна идея, которую хотел предложить тебе на обсуждение.<br>\n",
-        "Возможно, покажется интересным<br><br>\n",
-        "\n",
-        "Дело касается принципиально иного подхода к поиску решения для снижения энергопотребления на производстве<br>\n",
-        "Смотри, Создание данной модели (таково было задание) двигалось по пути \"угадывания\" температуры<br>\n",
-        "Но мы же знаем жизнь)) лёгкие колебания температур (как и нашего настроения, нашего веса.....)<br>\n",
-        "есть всегда. Более того - будут вегда! И нам что, стараться угадывать их?<br>\n",
-        "Не угонимся, \"пупок\" развяжется))))) <br>\n",
-        "Предложу для подобных проектов подумать вот в какую сторону<br>\n",
-        "    \n",
-        "Итак, разброс в измерениях - есть, был и будет!! (т.к. этому благоприятствует разнообразие факторов самого проиозводства)<br>\n",
-        "    Тогда задачу можно поставить так: <u>надо уменьшить разброс в измерениях</u>. В данном случае в температуре.<br>\n",
-        "Один из подходов такой: Наверняка есть границы, в пределах которых колебания температур - дело нормальное.<br>\n",
-        "А что, если фикировать случаи, когда температура выходит за эти границы?<br>\n",
-        "Скажем, как \"1\". И тогда для таких моментов времени собирать инфо по производству: <br>\n",
-        "а что был за материал (химия материала), что был за газ (химический состав газа), какая бригада работала, <br>\n",
-        "что там было с электродами, ограничения только в фантазиях ну и в знаниях самого производства..... <br>\n",
-        "И вот тут можем реально находить причины (через корреляции, проверки гипотез, разные модельки...), фиксировать эти причины. <br>\n",
-        "Ну и разрабатывать энергосберегательные мероприятия.<br><br>\n",
-        "\n",
-        "Это было отступление)<br>    \n",
-        "Тогда впереди только отчёт. Что для него важно - оставлял в презентации. <br><br>\n",
-        "БУДУ ЖДАТЬ! <br>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "q1XNsDltyAZa"
       },
       "source": [
@@ -13322,7 +13279,7 @@
         "\n",
         "***Цель:*** Оптимизировать производственные расходы металлургического комбината и уменьшить потребление электроэнергии на этапе обработки стали.\n",
         "\n",
-        "***Задача:*** Построить модель, которая способна предсказать температуру сплава в конце процесса обработки стали;\n",
+        "***Задача:*** Построить модель, которая способна предсказать температуру сплава в конце процесса обработки стали.\n",
         "\n",
         "***Основновные шаги выполненные согласно плану проекта:***\n",
         "* Загрузка данных и получение общей информации о предоставленных таблицах (data_temp, data_arc, data_gas, data_bulk, data_wire, data_bulk_time и data_wire_time).\n",
@@ -13398,41 +13355,6 @@
         "     \n",
         "***Рекомендации:***\n",
         "- Выяснить у заказчика о взаимосвязи между вносимыми добавками."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Cz4j5xhtyAZb"
-      },
-      "source": [
-        "<div class=\"alert alert-success\" style=\"border-color: green; border-radius: 5px\">\n",
-        "    <p><u><b>✅ КОММЕНТАРИЙ ТИМЛИДА 4</b></u></p>\n",
-        "Привет Виталий!<br>С отчётом - ОК. Всё чётко и понятно, как и надо.<br>\n",
-        "    \n",
-        "    \n",
-        "Поздравляю с получением диплома о новой специальности!!!!<br>    \n",
-        "Добавлю вот что ещё: изучение бизнес-процессов заказчика - очень важный этап, который может вызывать сложности. Но без этого в нашей работа не обойтись. Можно сказать - вскрывать особенности процессов заказчика - часть нашей работы. Ведь замоделировать можно только то, что понимаешь).<br>\n",
-        "    \n",
-        "Далее скажу, что стараюсь говорить всем на финале.<br>\n",
-        "Пройден большой путь. Со своими коcогорами и равнинами, медианами и дисперсиями)<br>\n",
-        "Умение аналитически мыслить, писать красивый код, эффективно автоматизировать расчёты, видеть задачи бизнеса через призму моделирования - вот то основное, что  останется у тебя важного после нашей школы. А дальше - только взращивать посеянные зёрна и укреплять свои скилы.<br><br>\n",
-        "Если говорить о развитии дополнительных компетенций, рекомендовал бы ещё глянуть такие области знаний:<br>\n",
-        "1) Организация проектов по проведению моделирования (например Методология CRISP-DM (Cross-Industry Standard Process)<br>\n",
-        "2) Умения системно подходить к решению аналитической задачи. (например методология ТРИЗ, системный анализ)<br>\n",
-        "3) Если в промышленности будут проекты, то рекоммендовал бы освоить  \"Статистичекий контроль качества (SPC)\"<br>\n",
-        "4) Ещё важный навык: перевод результататов моделирования на язык бизнеса. Т.е. понимание, как целевые показатели моделей влияют на финансовую выгоду заказчика.<br>\n",
-        "5) Если говорить о модельных рекоммендациях, то есть ещё такие способы как блендинг и стакинг разных моделей.<br><br>\n",
-        "\n",
-        "Каждого из нас (и меня в том числе) можно оценивать с нескольких сторон, как специалиста.<br>\n",
-        "1) Умение анализировать, \"вгрызание\" в данные, в задачу.<br>\n",
-        "2) Знание мат.части: методы, подходы к решению - всё, что по программе заложено<br>\n",
-        "3) Кодовая часть: умение писать эффективный код.<br>\n",
-        "4) Работа с графикой. (умение хорошо ыизуализировать)<br>\n",
-        "И при рабочей деятельности (устраивание на работу/ улучшение карьеры) на важно понимать свои слабые/сильные стороны по этим направлениям. И опираться на них при ведении переговоров и выстраивании дальнейшего совершенствования.<br><br>    \n",
-        "    \n",
-        "УСПЕХОВ!<br>\n",
-        "Спасибо)<br>"
       ]
     }
   ],
