--- a/steelmaking/steelmaking.ipynb
+++ b/steelmaking/steelmaking.ipynb
@@ -21,45 +21,10 @@
       "source": [
         "# Описание проекта\n",
         "\n",
-        "Оптимизация производственных расходов металлургического комбината. Необходимо построить модель машинного обучения, которая предсказывает температуру сплава стали на этапе обработки (внесения лигирующих добавок). Это позволит оптимизировать процесс подогрева сплава стали и уменьшить потребление электроэнергии.\n",
+        "Исследовние технологического процесса производства стали. Оптимизация производственных расходов металлургического комбината: необходимо уменьшить потребление электроэнергии на этапе обработки стали. Предоставленны данные по измерениям температуры сплава и внесённых лигирующих добавках в процессе обработки стали. Модель машинного обучения должна предсказать температуру сплава стали в конце этапа обработки, что позволит оптимизировать процесс подогрева сплава стали и уменьшить потребление электроэнергии.\n",
         "\n",
-        "*Задача:* Предсказать температуру сплава стали в конце этапа обработки после внесения лигирующих добавок.\n",
-        "\n",
-        "### Описание этапа обработки\n",
-        "\n",
-        "Сталь обрабатывают в металлическом ковше вместимостью около 100 тонн. Чтобы ковш выдерживал высокие температуры, изнутри его облицовывают огнеупорным кирпичом. Расплавленную сталь заливают в ковш и подогревают до нужной температуры графитовыми электродами. Они установлены в крышке ковша.\n",
-        "\n",
-        "Из сплава выводится сера (десульфурация), добавлением примесей корректируется химический состав и отбираются пробы. Сталь легируют — изменяют её состав — подавая куски сплава из бункера для сыпучих материалов или проволоку через специальный трайб-аппарат (англ. tribe, «масса»).\n",
-        "\n",
-        "Перед тем как первый раз ввести легирующие добавки, измеряют температуру стали и производят её химический анализ. Потом температуру на несколько минут повышают, добавляют легирующие материалы и продувают сплав инертным газом. Затем его перемешивают и снова проводят измерения. Такой цикл повторяется до достижения целевого химического состава и оптимальной температуры плавки.\n",
-        "\n",
-        "Тогда расплавленная сталь отправляется на доводку металла или поступает в машину непрерывной разливки. Оттуда готовый продукт выходит в виде заготовок-слябов (англ. *slab*, «плита»).\n",
-        "\n",
-        "### Описание данных\n",
-        "\n",
-        "Данные состоят из файлов, полученных из разных источников:\n",
-        "\n",
-        "- `data_arc.csv` — данные об электродах;\n",
-        "- `data_bulk.csv` — данные о подаче сыпучих материалов (объём);\n",
-        "- `data_bulk_time.csv` *—* данные о подаче сыпучих материалов (время);\n",
-        "- `data_gas.csv` — данные о продувке сплава газом;\n",
-        "- `data_temp.csv` — результаты измерения температуры;\n",
-        "- `data_wire.csv` — данные о проволочных материалах (объём);\n",
-        "- `data_wire_time.csv` — данные о проволочных материалах (время).\n",
-        "\n",
-        "Во всех файлах столбец `key` содержит номер партии. В файлах может быть несколько строк с одинаковым значением `key`: они соответствуют разным итерациям обработки."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "UGDYLJNu6ipB"
-      },
-      "source": [
-        "# Используемые инструменты и навыки\n",
-        "\n",
-        "***Решается задача регрессии:***\n",
-        "Предсказать температуру сплава в конце процесса обработки стали.\n",
+        "***Задача:***\n",
+        "Предсказать температуру сплава в конце процесса обработки стали (задача регресии).\n",
         "\n",
         "***Используемые библиотеки:*** numpy, pandas, matplotlib, seaborn, ploty, sklearn, lightgbm, catboost, hyperopt, keras.\n",
         "\n",
@@ -75,7 +40,29 @@
         "5. Нейросети (полносвязная сеть (maltylayer perceptron), сверточная сеть (convolution multylayer network), сеть с архитектурой LeNet);\n",
         "- Кросс-валидация и настройка гиперпараметров (cross_val_score, GridSearchCV, RandomizedSearchCV, hyperopt);\n",
         "- Анализ значимых признаков (RidgeCV, feature_importances, permutation_importance);\n",
-        "- Упаковка в пайплайн (Pipeline) нескольких шагов, упаковка в пайплайн несколько моделей, использование пайплайн совместно с кросс-валидацией и оптимизацией гиперпараметров."
+        "- Упаковка в пайплайн (Pipeline) нескольких шагов, упаковка в пайплайн несколько моделей, использование пайплайн совместно с кросс-валидацией и оптимизацией гиперпараметров.\n",
+        "\n",
+        "#### Описание этапа обработки\n",
+        "Сталь обрабатывают в металлическом ковше вместимостью около 100 тонн. Чтобы ковш выдерживал высокие температуры, изнутри его облицовывают огнеупорным кирпичом. Расплавленную сталь заливают в ковш и подогревают до нужной температуры графитовыми электродами. Они установлены в крышке ковша.\n",
+        "\n",
+        "Из сплава выводится сера (десульфурация), добавлением примесей корректируется химический состав и отбираются пробы. Сталь легируют — изменяют её состав — подавая куски сплава из бункера для сыпучих материалов или проволоку через специальный трайб-аппарат (англ. tribe, «масса»).\n",
+        "\n",
+        "Перед тем как первый раз ввести легирующие добавки, измеряют температуру стали и производят её химический анализ. Потом температуру на несколько минут повышают, добавляют легирующие материалы и продувают сплав инертным газом. Затем его перемешивают и снова проводят измерения. Такой цикл повторяется до достижения целевого химического состава и оптимальной температуры плавки.\n",
+        "\n",
+        "Тогда расплавленная сталь отправляется на доводку металла или поступает в машину непрерывной разливки. Оттуда готовый продукт выходит в виде заготовок-слябов (англ. *slab*, «плита»).\n",
+        "\n",
+        "#### Описание данных\n",
+        "Данные состоят из файлов, полученных из разных источников:\n",
+        "\n",
+        "- `data_arc.csv` — данные об электродах;\n",
+        "- `data_bulk.csv` — данные о подаче сыпучих материалов (объём);\n",
+        "- `data_bulk_time.csv` *—* данные о подаче сыпучих материалов (время);\n",
+        "- `data_gas.csv` — данные о продувке сплава газом;\n",
+        "- `data_temp.csv` — результаты измерения температуры;\n",
+        "- `data_wire.csv` — данные о проволочных материалах (объём);\n",
+        "- `data_wire_time.csv` — данные о проволочных материалах (время).\n",
+        "\n",
+        "Во всех файлах столбец `key` содержит номер партии. В файлах может быть несколько строк с одинаковым значением `key`: они соответствуют разным итерациям обработки."
       ]
     },
     {
@@ -15759,7 +15746,10 @@
     ],
     "colab": {
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "collapsed_sections": [
+        "mLq_zkAYh-bm"
+      ]
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
