Add nlp_toxic_comments & update readme

--- a/computer_vision_age_id/computer_vision_age_id.ipynb
+++ b/computer_vision_age_id/computer_vision_age_id.ipynb
@@ -28,17 +28,13 @@
       "source": [
         "Сетевой супермаркет внедряет систему компьютерного зрения для обработки фотографий покупателей. Фотофиксация в прикассовой зоне поможет определять возраст клиентов, чтобы анализировать покупки и предлагать товары, которые могут заинтересовать покупателей этой возрастной группы, а также контролировать добросовестность кассиров при продаже алкоголя.\n",
         "\n",
-        "***Задача:***\n",
+        "***Задача:***<br/>\n",
         "Построить модель, которая по фотографии может определить приблизительный возраст человека.\n",
         "\n",
-        "Метрика качества - MAE.\n",
+        "Метрика качества - *MAE*.\n",
         "\n",
-        "***Используемые библиотеки:***\n",
-        "pandas, numpy, tensorflow, keras, matplotlib.\n",
-        "\n",
-        "**Описание данных**<br/>\n",
-        "Данные взяты с сайта ChaLearn Looking at People.\n",
-        "Они находятся в папке /datasets/faces/. Папка содержит папку с изображениями /final_files и csv-файл labels.csv с двумя колонками file_name и real_age.\n"
+        "***Описание данных:***<br/>\n",
+        "Данные взяты с сайта *ChaLearn Looking at People* и находятся в папке *faces*. Эта папка содержит папку с изображениями *final_files* и csv-файл *labels.csv* с двумя колонками *file_name* и *real_age*.\n"
       ]
     },
     {
