--- a/computer_vision_age_id/computer_vision_age_id.ipynb
+++ b/computer_vision_age_id/computer_vision_age_id.ipynb
@@ -34,7 +34,7 @@
         "Метрика качества - *MAE*.\n",
         "\n",
         "***Описание данных:***<br/>\n",
-        "Данные взяты с сайта *ChaLearn Looking at People* и находятся в папке *faces*. Эта папка содержит папку с изображениями *final_files* и csv-файл *labels.csv* с двумя колонками *file_name* и *real_age*.\n"
+        "Данные взяты с сайта `ChaLearn Looking at People` и находятся в папке *faces*. Эта папка содержит папку с изображениями `final_files` и файл `labels.csv` с двумя столбцами *file_name* и *real_age* (идентификатор фото и возраст человека соответственно).\n"
       ]
     },
     {
@@ -66,7 +66,11 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "# from tensorflow.keras.applications.resnet import ResNet50\n",
+        "# from tensorflow.keras.layers import GlobalAveragePooling2D, Dense\n",
+        "# from tensorflow.keras.models import Sequential\n",
+        "# from tensorflow.keras.optimizers import Adam"
       ]
     },
     {
