--- a/computer_vision_age_id/computer_vision_age_id.ipynb
+++ b/computer_vision_age_id/computer_vision_age_id.ipynb
@@ -34,7 +34,7 @@
         "Метрика качества - *MAE*.\n",
         "\n",
         "***Описание данных:***<br/>\n",
-        "Данные взяты с сайта `ChaLearn Looking at People` и находятся в папке *faces*. Эта папка содержит папку с изображениями `final_files` и файл `labels.csv` с двумя столбцами *file_name* и *real_age* (идентификатор фото и возраст человека соответственно).\n"
+        "Данные взяты с сайта *ChaLearn Looking at People* и находятся в папке `faces`. Эта папка содержит папку с изображениями `final_files` и файл `labels.csv` с двумя столбцами *file_name* и *real_age* (идентификатор фото и возраст человека соответственно).\n"
       ]
     },
     {
