--- a/nlp_toxic_comments/nlp_toxic_comments.ipynb
+++ b/nlp_toxic_comments/nlp_toxic_comments.ipynb
@@ -7,7 +7,7 @@
       },
       "source": [
         "<div class=\"alert alert-success\">\n",
-        "<h2> <b> Обработка естественного языка </b> <font size=\"7\" color=blue> 👅 </font></h2>\n",
+        "<h2> <b> Обработка естественного языка </b> <font size=\"7\" color=green> 👅 </font></h2>\n",
         "</div>"
       ]
     },
@@ -40,7 +40,7 @@
         "Интернет-магазин запускает новый сервис. Теперь пользователи могут редактировать и дополнять описания товаров, как в вики-сообществах. То есть клиенты предлагают свои правки и комментируют изменения других. Магазину нужен инструмент, который будет искать токсичные комментарии и отправлять их на модерацию.\n",
         "\n",
         "***Задача:***<br/>\n",
-        "Построить модель, которая умеет классифицировать комментарии на позитивные и негативные.\n",
+        "Построить модель, которая может разделить комментарии на позитивные и негативные (анализ тональности текста (сентимент-анализ), задача классификации).\n",
         "\n",
         "Метрика качества - *F1*.\n",
         "\n",
